--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "latest-version": "^5.1.0",
     "method-override": "^3.0.0",
+    "mkdirp": "^1.0.3",
     "pidusage": "^2.0.17",
     "tramway": "^0.5.1",
     "tramway-core-logger": "^0.1.0",
